--- a/style/style.css
+++ b/style/style.css
@@ -124,11 +124,14 @@ body {
 
 .six .hat {
   position: absolute;
-  width: 80px;
-  top: -35px;
+  width: 70px;
+  top: -50px;
   left: 41.5%;
+  margin-left : 12%
   /* transform: scale(0.1); */
 }
+
+
 
 .baloons img {
   display: inline-block;
@@ -214,7 +217,10 @@ body {
   font-size: 3em;
   margin: 0;
   text-transform: uppercase;
+  white-space: pre-wrap; /* Ensures spaces are preserved */
 }
+
+
 
 .wish h5 {
   font-weight: lighter;
